--- a/scss/components/_top_app_bar.scss
+++ b/scss/components/_top_app_bar.scss
@@ -63,6 +63,14 @@ body {
               div {
                 &.block {
                   float: left;
+                  div {
+                    &.materialyou-button {
+                      &.materialyou-flat-button {
+                        padding-top: 0;
+                        padding-bottom: 0;
+                      }
+                    }
+                  }
                 }
               }
               nav {
