--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -8,6 +8,7 @@
   z-index: 0;
   cursor: pointer;
   min-width: 3rem;
+  position: relative;
   &.materialyou-submit-button {
     background-color: var(--md-sys-color-primary);
     color: var(--md-sys-color-on-primary);
@@ -25,5 +26,18 @@
     min-width: 0;
     width: 24px;
     height: 24px;
+  }
+  p {
+    &.badge {
+      position: absolute;
+      top: 0;
+      right: 0;
+      margin: 0;
+      padding: 0 0.125rem;
+      border-radius: 0.5rem;
+      z-index: 8;
+      background-color: var(--md-sys-color-primary-container);
+      color: var(--md-sys-color-on-primary-container);
+    }
   }
 }
